--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Wishlist</string>
     <string name="add_new_shop_item_description">Add new shop item</string>
+    <string name="hint_name">Name</string>
+    <string name="hint_count">Count</string>
+    <string name="save">Save</string>
 </resources>
